added form with input

--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
 </head>
 <body>
 
-  We're coming soon
+  <h1>We're coming soon</h1>
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
+  <p>Hello fellow shoppers! We're currently building our new fashion store. 
+  Add your email below to stay up-to-date with announcements and our launch deals.</p>
 
-  <form action="/thanks.html"></form>
+  <form action="/thanks.html">
+    <label for="email" hidden>Enter your email:</label>
+    <input id="email" type="email" placeholder="Your Email" required>
+    <button id="submit" type="submit">Submit</button>
+  </form>
   
   <footer>
     <p class="attribution">
