--- a/thanks.html
+++ b/thanks.html
@@ -7,6 +7,7 @@
     <title>Thanks for Your Submission</title>
 </head>
 <body>
-    
+    <h2>Thanks for Your Submission!</h2>
+    <h4>Check your email for the latest updates!</h4>
 </body>
 </html>
