added custom favicon, image and edited page text for music, not shopping

--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Base Apparel coming soon page</title>
+  
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  
+  <title>Coming Soon!</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+ 
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    
   </style>
 </head>
 <body>
+  <img src="images/guitar.jpg" alt="A black and white guitar with fire one one side and water on the other side.">
+  <h1>We're Coming Soon!</h1>
 
-  <h1>We're coming soon</h1>
-
-  <p>Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.</p>
+  <p>Hello fellow music lovers! We're currently building our new one stop shop for all things music! 
+  Add your email below to stay up-to-date with announcements and our launch dates.</p>
 
   <form action="/thanks.html">
     <label for="email" hidden>Enter your email:</label>
