edited main image and added logo and some styling

--- a/index.html
+++ b/index.html
@@ -4,21 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  
-  
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="style/style.css">
+
+  <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">  
+  
   <title>Coming Soon!</title>
 
- 
-  <style>
-    
-  </style>
+
 </head>
 <body>
-  <img src="images/guitar.jpg" alt="A black and white guitar with fire one one side and water on the other side.">
+  <header>
+    <img id="logo"src="images/favicon-32x32.png" alt="Music Logo">
+  </header>
+  <div class="image">
+    <img id="mainImg" src="images/guitar-mobile.png" alt="A black and white guitar with fire one one side and water on the other side.">
+  </div>
   <h1>We're Coming Soon!</h1>
 
   <p>Hello fellow music lovers! We're currently building our new one stop shop for all things music! 
